Continued adding correct colour values for dark mode theme across site, tweaked height property of multiple elements for consistent visual effect

--- a/src/components/ImageSection/ImageSection.scss
+++ b/src/components/ImageSection/ImageSection.scss
@@ -2,6 +2,7 @@
 
 .image-section {
   position: relative;
+  display: flex;
 }
 
 .image-section--splash {
