--- a/src/components/SiteSection/SiteSection.scss
+++ b/src/components/SiteSection/SiteSection.scss
@@ -1,3 +1,11 @@
+section:only-of-type {
+  height: 100%;
+  .site-section__wrapper--split,
+  .site-section__wrapper--wide {
+    height: 100%;
+  }
+}
+
 .site-section__wrapper--split {
   display: flex;
   justify-content: space-around;
@@ -12,4 +20,5 @@
 
 .site-section__wrapper--wide {
   width: 100%;
+  background-color: var(--background);
 }
