--- a/src/content/About/AboutNav/AboutNav.scss
+++ b/src/content/About/AboutNav/AboutNav.scss
@@ -4,10 +4,13 @@
   list-style: none;
   padding: 1rem 0;
 
+  background-color: var(--background);
+
   & button {
     background: none;
     border: none;
     font-size: 1.1rem;
+    color: var(--font);
     &:hover {
       cursor: pointer;
     }
