--- a/src/layouts/Layout.scss
+++ b/src/layouts/Layout.scss
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap");
 
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -12,7 +18,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+div#root {
+  height: 100%;
+}
+
 .layout__container {
   position: relative;
   padding-top: 3.5rem;
+  height: 100%;
 }
