--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -1,7 +1,7 @@
 .about {
-  margin-top: 3.75rem;
   padding: 3rem;
-
+  color: var(--font);
+  background-color: var(--background);
   & h3 {
     margin-bottom: 1.5rem;
 
